--- a/department-service.properties
+++ b/department-service.properties
@@ -3,6 +3,6 @@ spring.datasource.username=root
 spring.datasource.password=sa@12345
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.boot.message= Hello  Department Service Updated
+spring.boot.message= Hello  Department Service will be  Updated
 
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
